--- a/index.html
+++ b/index.html
@@ -338,7 +338,7 @@
                                 <img src="./static/logo.svg" alt="logo">
                             </div>
                             <p>Get great</p>
-                            <p>loan! ></p>
+                            <p>Mark! ></p>
                         </div>
                     </div>
                 </div>
