--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="nav">
             <div class="slogan">
                 <div class="logo">
-                    <img src="./static/logo.svg" alt="Logo">
+                    <img src="./static/logo.png" alt="Logo">
                 </div>
                 <div class="brand-name">cloudcash</div>
             </div>
@@ -45,7 +45,7 @@
             </div>
             <div class="bottom-cta">
                 <div class="cloud-img">
-                    <img src="./static/cloud-arrow-up-thin-svgrepo-com.svg" alt="cloud">
+                    <img src="./static/cloud.png" alt="cloud">
                 </div>
                 <p>Give your money awesome space in cloud</p>
                 <div class="cta-btn">
@@ -82,7 +82,7 @@
                         <div class="paypal">
                             <i class="fas fa-chevron-left"></i>
                             <div class="visa">
-                                <img src="./static/logo.svg" alt="logo" class="background-logo">
+                                <img src="./static/background-cloud.png" alt="logo" class="background-logo">
                                 <div class="visa-name">
                                     <h2>cloudcash</h2>
                                     <p>PERMIUM ACCOUNT</p>
@@ -338,7 +338,7 @@
                                 <img src="./static/logo.svg" alt="logo">
                             </div>
                             <p>Get great</p>
-                            <p>Mark! ></p>
+                            <p>loan! ></p>
                         </div>
                     </div>
                 </div>
