--- a/index.html
+++ b/index.html
@@ -337,6 +337,9 @@
                             <div class="logo-second">
                                 <img src="./static/logo.svg" alt="logo">
                             </div>
+                            <div class="logo-third">
+                                <img src="./static/dollar.png" alt="logo">
+                            </div>
                             <p>Get great</p>
                             <p>loan! ></p>
                         </div>
